Add enum example
