# micronaut/src/main/kotlin/dk/ulrikandersen/controllers/UserMeControllerImpl.kt
@@ -1,6 +1,8 @@
 package dk.ulrikandersen.controllers
 
 import dk.ulrikandersen.models.UserProfileNetworkModel
+import dk.ulrikandersen.models.UserProfileNetworkModelOnboardingStatusNetworkModel
+import dk.ulrikandersen.models.UserProfileNetworkModelOnboardingStatusNetworkModel.PARTIALLY_ONBOARDED
 import io.micronaut.http.HttpResponse
 import io.micronaut.http.annotation.Controller
 import io.micronaut.security.authentication.Authentication
@@ -11,6 +13,7 @@ class UserMeControllerImpl : UserMeController {
         return HttpResponse.ok(UserProfileNetworkModel(
             name = "John Doe",
             email = "john@doe.dev",
+            onboardingStatus = PARTIALLY_ONBOARDED,
         ))
     }
 }
